# estetimacge

./: CMakeLists.txt  CMakeLists.txt~  capture.cpp  capture.hpp  config.cpp  config.hpp  constants  doc  main  main.cpp  notifications.cpp  notifications.hpp  parameters.cpp  parameters.hpp  params.h  shot-0000.nef  shot-0001.nef  shot-0002.nef  shot-0003.nef  shot-0005.nef  shot-0006.nef  shot-0007.nef  widget.cpp  widget.hpp
analyse/: Makefile  estetimacge  main.cpp  photo.hpp
analyse/detector/: contourDetector.cpp  faceDetector.cpp  landscapeDetector.cpp
analyse/opencv_code/: image_moments_contours
db/: createdbsql.cpp  database_images
pca/: Makefile  main.cpp  pca.cpp
src/: analyse.cpp  capture.cpp  config.cpp  db_test.cpp  doc  filter.cpp  ioEigen.cpp  main.cpp  notifications.cpp  notsooldmain.cpp  oldmain.cpp  parameters.cpp  parametersToIndex.cpp  pca.cpp  photo.cpp  widget.cpp
src/detector/: contourDetector.cpp  faceDetector.cpp  globalTintDetector.cpp
src/detector/include/: contourDetector.hpp  faceDetector.hpp  globalTintDetector.hpp  landscapeDetector.hpp
src/include/: analyse.hpp  capture.hpp  config.hpp  filter.hpp  ioEigen.hpp  notifications.hpp  parameters.hpp  parametersToIndex.hpp  params.h  pca.hpp  widget.hpp
src/matrix/: data.mat  database.mat
src/opencv_code/: descriptor_extractor_keypoints.cpp  find_contours.cpp  template_matching.cpp
